[gd_scene load_steps=6 format=2]

[ext_resource path="res://plants/Plant.gd" type="Script" id=1]
[ext_resource path="res://Actionable.tscn" type="PackedScene" id=2]
[ext_resource path="res://plants/seed.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=3]
radius = 23.0868

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="Plant" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="Actionable" parent="." instance=ExtResource( 2 )]
position = Vector2( 16, 17 )

[node name="GrabArea" type="CollisionShape2D" parent="Actionable"]
position = Vector2( 0, -1 )
shape = SubResource( 3 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 16 )
shape = SubResource( 2 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="grabbing" from="Actionable" to="." method="_on_Grabbable_grabbing"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
